support/rabbitmq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-rabbitmq
  namespace: rabbitmq
  # annotations:
  #   # cert-manager.io/issuer: letsencrypt-nginx
  #   ## https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  # tls:
  #   - hosts:
  #     - rabbitmq.6senseev.com
  #     secretName: letsencrypt-nginx-quote
  rules:  
    - host: rabbitmq.6senseev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rabbitmqcluster
                port:
                  # name: management
                  number: 15672
  ingressClassName: nginx
