support/redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-redis
  namespace: redis
  # annotations:
  #   # cert-manager.io/issuer: letsencrypt-nginx
  #   ## https://argo-cd.readthedocs.io/en/stable/operator-manual/ingress/
  #   nginx.ingress.kubernetes.io/ssl-passthrough: "true"
  #   nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  # tls:
  #   - hosts:
  #     - redis.6senseev.com
  #     secretName: letsencrypt-nginx-quote
  rules:  
    - host: redis.6senseev.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: redis-cluster
                port:
                  number: 6379
  ingressClassName: nginx
